# palm

./: pyproject.toml  test.py
palm.egg-info/: PKG-INFO  SOURCES.txt
palm/base/: errors.py  pipe.py  schema.py  validation.py
palm/schemas/: __init__.py  any.py  string.py
palm/utils/: common.py
